# serializer version: 1
# name: test_code_version_changes_propagate
  dict({
    'base': dict({
      'data': '4c4a9f5d',
    }),
    'derived': dict({
      'processed': '1b9fb9e3',
    }),
  })
# ---
# name: test_complex_multi_level_graph
  dict({
    'analysis': dict({
      'full_analysis': '73d07532',
      'visual_metadata': 'ce3eb310',
    }),
    'processed_video': dict({
      'enhanced_frames': '3aaeb0d3',
      'normalized_audio': 'ecece8e4',
    }),
    'raw_metadata': dict({
      'info': '762fd106',
    }),
    'raw_video': dict({
      'audio': 'aa2eb771',
      'frames': '3da1d981',
    }),
  })
# ---
# name: test_diamond_dependency_graph
  dict({
    'branch_left': dict({
      'left_processed': '48a24e78',
    }),
    'branch_right': dict({
      'right_processed': '1076c04e',
    }),
    'merged': dict({
      'fusion': '7e0db82d',
    }),
    'root': dict({
      'data': '27a4d760',
    }),
  })
# ---
# name: test_feature_with_multiple_fields
  dict({
    'audio': '4c0dc244',
    'frames': '3081ee93',
    'metadata': '0f1afba6',
  })
# ---
# name: test_linear_dependency_chain
  dict({
    'a': dict({
      'raw': '520c9eec',
    }),
    'b': dict({
      'processed': '292266cd',
    }),
    'c': dict({
      'final': 'f8bffcec',
    }),
  })
# ---
# name: test_multiple_fields_different_deps
  dict({
    'x': dict({
      'x1': '81937486',
      'x2': 'a11b3acc',
    }),
    'y': dict({
      'y1': '9b8521b3',
      'y2': '68ea5edf',
    }),
    'z': dict({
      'z1': 'a0e6b061',
      'z2': '82c82356',
      'z3': '18693de8',
    }),
  })
# ---
# name: test_single_feature_provenance
  dict({
    'default': '433788cb',
  })
# ---
# name: test_specific_field_dependencies
  dict({
    'multi': dict({
      'audio': 'a0adde3c',
      'frames': 'c1cd5f75',
      'text': '3b03a873',
    }),
    'selective': dict({
      'audio_only': '6d38418a',
      'mixed': '43f7b588',
      'visual': '3f4da27b',
    }),
  })
# ---
